feat: Added public client self-registraton flow
