# backend/src/main/java/com/neueda/leap/dto/ClientRegistrationResponseDto.java
@@ -1,0 +1,10 @@
+package com.neueda.leap.dto;
+
+public record ClientRegistrationResponseDto(
+        Integer userId,
+        String username,
+        String displayName,
+        String role,
+        Integer clientId
+) {
+}
